--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,55 +1,9 @@
-/* reset styles */
-
-*,
-*::after,
-*::before {
-  box-sizing: border-box;
-}
-
-body {
-  margin: 0;
-  margin-top: 16px;
-  font-family: sans-serif;
-}
-
-p,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
-img {
-  display: block;
-}
-
-ul,
-ol {
-  list-style-type: none;
-  margin-top: 0;
-  margin-bottom: 0;
-  padding-left: 0;
-}
-
-a {
-  text-decoration: none;
-  display: block;
-}
-
-button {
-  font-family: inherit;
-  color: currentColor;
-}
-
 .profileContainer {
   max-width: 500px;
   margin: 0 auto;
   border: 3px solid black;
   border-radius: 8px;
+  margin-bottom: 16px;
 }
 
 .profileInfo {
