--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
 body {
   background-color: #f0f0f0;
+  margin: 0;
+  margin: 16px 0;
+  font-family: sans-serif;
 }
 
 /* reset styles */
@@ -8,12 +11,6 @@ body {
 *::after,
 *::before {
   box-sizing: border-box;
-}
-
-body {
-  margin: 0;
-  margin-top: 16px;
-  font-family: sans-serif;
 }
 
 p,
